// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Clause component should not return anything 1`] = `<DocumentFragment />`;

exports[`Clause component should render \`date\` field 1`] = `
<DocumentFragment>
  <label
    for="from_input_id"
  >
    From
    <input
      data-testid="range-field-from-input"
      id="from_input_id"
      placeholder="0"
      type="date"
      value=""
    />
  </label>
  <label
    for="to_input_id"
  >
    To
    <input
      data-testid="range-field-to-input"
      id="to_input_id"
      placeholder="100"
      type="date"
      value=""
    />
  </label>
</DocumentFragment>
`;

exports[`Clause component should render a \`string\` field with range 1`] = `
<DocumentFragment>
  <label
    for="input_accession"
  >
    UniProtKB AC
    <input
      id="input_accession"
      placeholder="P12345"
      type="text"
      value=""
    />
  </label>
</DocumentFragment>
`;

exports[`Clause component should render a \`text\` field 1`] = `
<DocumentFragment>
  <label
    for="input_accession"
  >
    UniProtKB AC
    <input
      id="input_accession"
      placeholder="P12345"
      type="text"
      value=""
    />
  </label>
</DocumentFragment>
`;

exports[`Clause component should render an \`enum\` field 1`] = `
<DocumentFragment>
  <label
    for="select_undefined"
  >
    <select
      data-testid="enum-field-select"
      id="select_undefined"
    />
  </label>
</DocumentFragment>
`;

exports[`Clause component should render an \`integer\` \`range\` field 1`] = `
<DocumentFragment>
  <label
    for="input_sites"
  >
    Any
    <input
      id="input_sites"
      placeholder="translocation"
      type="number"
      value=""
    />
  </label>
</DocumentFragment>
`;

exports[`Clause component should render an \`integer\` field 1`] = `
<DocumentFragment>
  <label
    for="input_sites"
  >
    Any
    <input
      id="input_sites"
      placeholder="translocation"
      type="number"
      value=""
    />
  </label>
</DocumentFragment>
`;
